# Tema1PAOO

src/: CMakeLists.txt  main.cpp
src/Tren/: CMakeLists.txt  VehiculeSine.hpp  tren.cpp  tren.hpp
src/Tren_calatori/: CMakeLists.txt  tren_calatori.cpp  tren_calatori.hpp
src/Tren_marfa/: CMakeLists.txt  tren_marfa.cpp  tren_marfa.hpp
